--- a/README.adoc
+++ b/README.adoc
@@ -30,7 +30,7 @@ LiquiDoc relies heavily on the Asciidoctor rendering engine, which produces HTML
 Output can be pretty much any flat file, with automatic data conversions to JSON and YAML, as well as rich-text/multimedia formats like HTML, PDF, slide decks, and more.
 // end::overview[]
 
-toc::
+toc::[]
 
 // tag::rocana-note[]
 [NOTE]
@@ -46,7 +46,7 @@ LiquiDoc is a build tool for software-documentation projects or for the document
 Unlike tools that are mere converters, LiquiDoc can be configured to perform multiple consecutive routines for generating content from multiple data/content sources, each output in various formats based on distinct templates and themes.
 It can be integrated into build- and package-management systems and deployed for continuous integration (CI).
 
-LiquiDoc pulls together the underlying “AJYL” technologies: link:https://asciidoctor.org/docs/what-is-asciidoc/[AsciiDoc technical markup] (via link:https://github.com/asciidoctor/asciidoctor[Asciidoctor]), link:https://en.wikipedia.org/wiki/YAML[YAML data structures], and the link:https://shopify.github.io/liquid/[Liquid templating format/engine], built using the link:https://jekyllrb.com/[Jekyll static-site generator] and link:https://jamstack.org/[JAMstack components and services] for publishing and delivery.
+LiquiDoc pulls together the underlying “*AJYL*” technologies: link:https://asciidoctor.org/docs/what-is-asciidoc/[AsciiDoc technical markup] (via link:https://github.com/asciidoctor/asciidoctor[Asciidoctor]), link:https://en.wikipedia.org/wiki/YAML[YAML data structures], and the link:https://shopify.github.io/liquid/[Liquid templating format/engine], built using the link:https://jekyllrb.com/[Jekyll static-site generator] and link:https://jamstack.org/[JAMstack components and services] for publishing and delivery.
 It is developed in coordination with the link:https://ajyl.org/liquidoc-cmf[LiquiDoc Content Management Framework], a recommended architecture, strategies, and conventions for building robust documents with LiquiDoc.
 LiquiDoc itself is fairly open-ended, supporting various configurations of dependent platforms Jekyll and Asciidoctor.
 
