--- a/README.adoc
+++ b/README.adoc
@@ -562,6 +562,8 @@ In addition to designating `action: migrate`, migrate operations require just a 
 - action: migrate
   source: index-map.adoc
   target: _build/index-map.adoc
+  options:
+    missing: warn
 ----
 
 The first action step above copies all the files and folders in `assets/images` and adds them to `_build/img`.
@@ -570,6 +572,10 @@ When both the source and target paths are directories and inclusive is `true`, t
 When inclusive is `false`, they copy to `target/`.
 
 Individual files must be listed in individual steps, one per step, as in the second step above.
+
+In case of a missing source directory or file to be migrated, the default behavior is the exit the operation (`missing: raise`).
+This can be overridden by setting the option `missing: warn`.
+
 // end::migrate-operations[]
 
 === Render Operations
