Fix broken include

--- a/docs/topics/action_parse.adoc
+++ b/docs/topics/action_parse.adoc
@@ -189,7 +189,7 @@ useful.
 
 ifdef::manual[]
 [[liquid-templating]]
-include::./liquid_templating.adoc[]
+include::./templating_liquid.adoc[]
 endif::[]
 ifndef::manual[]
 [NOTE]
